# helpdesk-chatbot

./: .gitignore  .pre-commit-config.yaml  Justfile  LICENSE  README.md  main.py  pyproject.toml  test_ollama.py
