[project]
name = "helpdesk-chatbot"
version = "0.1.0"
description = "IT Helpdesk chatbot running 100% locally with Ollama"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic-settings>=2.14.2",
]

[dependency-groups]
dev = [
    "hypothesis>=6.155.7",
    "mypy>=2.1.0",
    "pip-audit>=2.10.1",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "PTH", "S", "RUF", "C4", "T20", "PERF"]
ignore = ["S101"]

[tool.mypy]
strict = true
ignore_missing_imports = true
